--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "psr-4": {
             "App\\": "app/",
             "Modules\\": "Modules/"
-        }
+        },
+        "files": [
+            "app/Helpers/function.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
